# rag-knowledge-assistant

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
config/: settings.py
data/attacks/: attacks.jsonl
data/sample/: chunking.md  embeddings.md  evaluation.md  finetuning.md  llm_serving.md  prompting.md  reranking.md  retrieval.md  security.md  vector_stores.md
evaluation/: qa_dataset.jsonl  run_eval.py  run_security_eval.py
src/rag/: __init__.py  factory.py  observability.py  pipeline.py  types.py
src/rag/embeddings/: encoder.py
src/rag/eval/: metrics.py
src/rag/generation/: llm.py  prompts.py
src/rag/ingestion/: chunking.py  loaders.py
src/rag/retrieval/: bm25.py  hybrid.py  rerank.py
src/rag/security/: __init__.py  detectors.py  events.py  guard.py  output_guard.py  patterns.py  sanitize.py
src/rag/store/: memory.py  qdrant_store.py
tests/: conftest.py  test_bm25.py  test_chunking.py  test_hybrid.py  test_pipeline.py  test_security.py
