[project]
name = "rag-knowledge-assistant"
version = "0.1.0"
description = "Гибридный RAG: вектор + BM25, RRF-слияние, кросс-энкодер-реранк, оценка качества"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
